@@ -183,7 +183,7 @@ bool CALLBACK_HID_Device_CreateHIDReport(USB_ClassInfo_HID_Device_t* const HIDIn
 		if (!(ButtonStatus_LCL & BUTTONS_BUTTON1))
 		  return 0;
 
-		KeyboardReport->Modifier = HID_KEYBOARD_MODIFER_LEFTSHIFT;
+		KeyboardReport->Modifier = HID_KEYBOARD_MODIFIER_LEFTSHIFT;
 
 		if (JoyStatus_LCL & JOY_UP)
 		  KeyboardReport->KeyCode[0] = HID_KEYBOARD_SC_A;
